feat-#2: Add configuration for firebase and environment variables in react-native

--- a/game/kegeland/app.json
+++ b/game/kegeland/app.json
@@ -13,16 +13,18 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.cdp.reactnativefirebase",
+      "googleServicesFile": "./GoogleService-Info.plist"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#FFFFFF"
+        "backgroundColor": "#FFFFFF",
+        "package": "com.cdp.reactnativefirebase",
+        "googleServicesFile": "./google-services.json"
       }
     },
     "web": {
