--- a/game/kegeland/package.json
+++ b/game/kegeland/package.json
@@ -11,6 +11,7 @@
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
     "@reduxjs/toolkit": "^1.6.1",
+    "@types/matter-js": "^0.17.5",
     "@types/react-native-dotenv": "^0.2.0",
     "@types/react-redux": "^7.1.18",
     "expo": "~42.0.1",
@@ -21,6 +22,7 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-dotenv": "^3.2.0",
+    "react-native-game-engine": "^1.2.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
     "react-native-web": "~0.13.12",
