--- a/game/kegeland/package.json
+++ b/game/kegeland/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
+    "@types/matter-js": "^0.17.5",
     "@types/react-native-dotenv": "^0.2.0",
     "expo": "~42.0.1",
     "expo-google-sign-in": "~9.2.1",
@@ -19,6 +20,7 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-dotenv": "^3.2.0",
+    "react-native-game-engine": "^1.2.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
     "react-native-web": "~0.13.12"
