--- a/game/kegeland/package.json
+++ b/game/kegeland/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
+    "@reduxjs/toolkit": "^1.6.1",
     "@types/react-native-dotenv": "^0.2.0",
+    "@types/react-redux": "^7.1.18",
     "expo": "~42.0.1",
     "expo-google-sign-in": "~9.2.1",
     "expo-status-bar": "~1.0.4",
@@ -21,7 +23,8 @@
     "react-native-dotenv": "^3.2.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "react-redux": "^7.2.5"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
