--- a/game/kegeland/package.json
+++ b/game/kegeland/package.json
@@ -18,6 +18,7 @@
     "expo-google-sign-in": "~9.2.1",
     "expo-status-bar": "~1.0.4",
     "@firebase": "^9.0.1",
+    "matter-js": "^0.17.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
