--- a/game/kegeland/package.json
+++ b/game/kegeland/package.json
@@ -14,11 +14,14 @@
     "@types/matter-js": "^0.17.5",
     "@types/react-native-dotenv": "^0.2.0",
     "@types/react-redux": "^7.1.18",
+    "@types/styled-components": "^5.1.14",
     "expo": "~42.0.1",
     "expo-google-sign-in": "~9.2.1",
+    "expo-linear-gradient": "~9.2.0",
     "expo-status-bar": "~1.0.4",
-    "@firebase": "^9.0.1",
+    "firebase": "^9.0.1",
     "matter-js": "^0.17.1",
+    "native-base": "^3.1.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
@@ -26,8 +29,11 @@
     "react-native-game-engine": "^1.2.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
+    "react-native-svg": "12.1.1",
     "react-native-web": "~0.13.12",
-    "react-redux": "^7.2.5"
+    "react-redux": "^7.2.5",
+    "styled-components": "^5.3.1",
+    "styled-system": "^5.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
