--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
           GOOGLE_SERICE_APPLE: ${{ secrets.GOOGLE_SERVICE_APPLE }}
         run: |
           base64 --decode <<< "$env:GOOGLE_SERVICE_ANDROID" > google-services.json \
-            && base64 --decode <<< "$env:GOOGLE_SERVICE_APPLE"" > GoogleService-Info.plist
+            && base64 --decode <<< "$env:GOOGLE_SERVICE_APPLE" > GoogleService-Info.plist
         working-directory: ${{env.working-directory}}
       - name: Publish application
         run: expo publish
