--- a/.github/workflows/game-tests.yml
+++ b/.github/workflows/game-tests.yml
@@ -5,28 +5,28 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
     paths:
-      - 'game/kegeland/**'
+      - "game/kegeland/**"
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-    env:
-      working-directory: ./game/kegeland
+    defaults:
+      run:
+        working-directory: ./game/kegeland
     strategy:
       matrix:
         node-version: [12.x, 14.x, 16.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v2
-      with:
-        node-version: ${{ matrix.node-version }}
-    - run: yarn install
-    - run: yarn test
+      - uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node-version }}
+      - run: yarn install
+      - run: yarn test
